--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-	"name": "webpack-babel-boilerplate",
-	"version": "1.0.0",
+	"name": "gravityzer",
+	"version": "0.0.1",
 	"main": "index.js",
-	"author": "Corey Howell",
+	"author": "Yannik Schröder",
 	"license": "MIT",
 	"devDependencies": {
-		"@babel/cli": "^7.2.3",
-		"@babel/core": "^7.3.3",
-		"@babel/preset-env": "^7.3.1",
-		"@babel/register": "^7.0.0",
-		"babel-loader": "^8.0.5",
-		"eslint": "^6.1.0",
+		"@babel/cli": "^7.6.0",
+		"@babel/core": "^7.6.0",
+		"@babel/polyfill": "^7.6.0",
+		"@babel/preset-env": "^7.6.0",
+		"@babel/register": "^7.6.0",
+		"babel-loader": "^8.0.6",
+		"css-loader": "^3.2.0",
+		"eslint": "^6.3.0",
 		"eslint-config-airbnb": "^18.0.1",
 		"eslint-config-prettier": "^6.2.0",
 		"eslint-plugin-import": "^2.18.2",
 		"eslint-plugin-jsx-a11y": "^6.2.3",
 		"eslint-plugin-prettier": "^3.1.0",
 		"eslint-plugin-react": "^7.14.3",
-		"eslint-plugin-react-hooks": "^1.7.0",
+		"eslint-plugin-react-hooks": "^2.0.1",
 		"html-webpack-plugin": "^3.2.0",
 		"prettier": "^1.18.2",
-		"webpack": "^4.29.5",
-		"webpack-cli": "^3.2.3",
-		"webpack-dev-server": "^3.1.14"
+		"style-loader": "^1.0.0",
+		"webpack": "^4.39.3",
+		"webpack-cli": "^3.3.8",
+		"webpack-dev-server": "^3.8.0"
 	},
 	"scripts": {
 		"dev": "webpack-dev-server --mode=development --config webpack.config.js",
 		"build": "webpack --mode=production -p --config webpack.config.js"
 	},
 	"dependencies": {
-		"@babel/polyfill": "^7.2.5",
-		"css-loader": "^2.1.0",
-		"style-loader": "^0.23.1"
+		"pixi.js": "^5.1.3"
 	}
 }
