--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"eslint-plugin-prettier": "^3.1.0",
 		"eslint-plugin-react": "^7.14.3",
 		"eslint-plugin-react-hooks": "^2.0.1",
+		"file-loader": "^4.2.0",
 		"html-webpack-plugin": "^3.2.0",
 		"prettier": "^1.18.2",
 		"style-loader": "^1.0.0",
