--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"build": "webpack --mode=production -p --config webpack.config.js"
 	},
 	"dependencies": {
-		"pixi.js": "^5.1.3"
+		"pixi.js": "^5.1.3",
+		"stats.js": "^0.17.0"
 	}
 }
